Added service tests